add auth views and dashboard for patient